# waul

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix  shell.nix
config/: config.ini
src/: common.cpp  common.hpp  config.cpp  config.hpp  ipc.cpp  ipc.hpp  main.cpp  renderer.cpp  renderer.hpp  wayland_backend.cpp  wayland_backend.hpp
